# Roxio

./: .gitignore  gradle.properties  keystore.properties  roxio.jks  settings.gradle.kts  version.json
core/: build.gradle.kts
core/src/androidTest/java/kurd/reco/core/: ExampleInstrumentedTest.kt
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  core.cpp  dpi.cpp
core/src/main/res/values/: strings.xml
core/src/main/res/values-tr/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mobile/: build.gradle.kts  google-services.json  proguard-rules.pro
mobile/release/: output-metadata.json
mobile/release/baselineProfiles/0/: mobile-release.dm
mobile/release/baselineProfiles/1/: mobile-release.dm
mobile/src/main/: AndroidManifest.xml
mobile/src/main/res/drawable/: cloud.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  netflix_pause.xml  netflix_play.xml  outline_volume_up_24.xml  roxio_logo.xml
mobile/src/main/res/values/: strings.xml  themes.xml
mobile/src/main/res/values-tr/: strings.xml
tv/: build.gradle.kts  proguard-rules.pro
tv/release/: output-metadata.json
tv/release/baselineProfiles/0/: tv-release.dm
tv/release/baselineProfiles/1/: tv-release.dm
tv/src/main/: AndroidManifest.xml
tv/src/main/res/drawable/: baseline_aspect_ratio_24.xml  hd_icon.xml  ic_channel_foreground.xml  ic_launcher_foreground.xml  rounded_video_settings_24.xml  subtitles.xml
tv/src/main/res/values/: strings.xml  themes.xml
tv/src/main/res/values-tr/: strings.xml
(+179 files in other folders)
